--- a/SistTestMillon/SistTestMillon/Views/Account/Index.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Account/Index.cshtml
@@ -3,13 +3,13 @@
     ViewBag.Title = "Entrar al Sistema de Inventarios";
     Layout = "~/Views/Shared/_LayoutAccount.cshtml";
 }
-<div class="o-page__card">
-    <div class="c-card u-mb-xsmall">
-        <header class="c-card__header u-pt-large">
-            <h1 class="u-h3 u-text-center u-mb-zero">Bienvenidos al Sistema de Psicologia.</h1>
+<div class="o-page__card" style="margin-top:-50px;">
+    <div class="c-card--responsive u-mb-small" style="background-color:#fff">
+        <header class="c-card__header u-pt-large" style="background-color:#222c3c">
+            <h1 class="u-h3 u-text-center u-mb-zero" style="color:white;font-family: HomeTown,serif;">Sistema de Psicologia.</h1>
         </header>
 
-        <form class="c-card__body formAjax" method="post" action="~/Account/Index">
+        <form class="c-card__body formAjax" method="post" action="~/Account/Index" style="height:400px">
             <div class="c-field u-mb-small">
                 <label class="c-field__label" for="input1">Usuario</label>
                 <input class="c-input" type="text" id="Usuario" required="required" name="Usuario" placeholder="nombre de usuario">
@@ -21,15 +21,21 @@
             <div class="c-field u-mb-small">
                 <input name="recordar" id="recordar" type="checkbox" value="true" /> <label class="c-field__label" for="recordar">Recordar</label>
             </div>
-            <button class="c-btn c-btn--primary c-btn--fullwidth btnAjax" type="submit">
-                Entrar
+            <button class="c-btn--fullwidth btnAjax" type="submit" style="height:45px;background-color:#222c3c;border: 1px solid;border-radius: 4px;">
+                <p style="color:white;font-family: Coolvetica Rg,sans-serif;">Entrar</p>
                 <img src="~/Content/img/load.gif" class="loadingAjax" style="display:none" />
             </button>
+            <div style="margin-top: 20px;">
+                <div style="min-height: 1px;position: relative">
+                    <div style="position: relative;line-height: 30px;zoom: 1;">
+                        <a class="u-float-left text-center" href="~/Account/Registrarme" style="font-family: Coolvetica Rg,sans-serif;font-size: 14px;">Registraste</a>
+                        <a class="u-float-right text-center" href="~/Account/RecuperarCuenta" style="font-family: Coolvetica Rg,sans-serif;font-size: 14px">Olvidaste tu contraseña</a>
+                    </div>
+                </div>
+            </div>
         </form>
+
     </div>
-    <div class="o-line">
-        <a class="u-text-mute u-text-small" href="~/Account/Registrarme">No estas registrado? Crea tu cuenta</a>
-        <a class="u-text-mute u-text-small" href="~/Account/RecuperarCuenta">Olvidaste tu contraseña?</a>
-    </div>
+
 </div>
 
