--- a/SistTestMillon/SistTestMillon/Views/Diagnostico/ListaDiagnosticos2.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Diagnostico/ListaDiagnosticos2.cshtml
@@ -47,7 +47,7 @@
                             @dd
                         </td>
                         <td class="c-table__cell">
-                            @item.Fecha
+                            @item.Fecha.Value.ToString("dd/MM/yyyy")
                         </td>                           
                         <td class="c-table__cell">
                             @item.HoraInicio
