--- a/SistTestMillon/SistTestMillon/Views/Historias/DetalleDiagnostico.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Historias/DetalleDiagnostico.cshtml
@@ -40,7 +40,7 @@
 
                                     </td>
                                     <td class="c-table__cell">
-                                        @item.Fecha
+                                        @item.Fecha.Value.ToString("dd/MM/yyyy")
 
                                     </td>
                                     <td class="c-table__cell">
