--- a/SistTestMillon/SistTestMillon/Views/Shared/_LayoutAccount.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Shared/_LayoutAccount.cshtml
@@ -22,7 +22,7 @@
     <link href="~/Content/css/custom.css" rel="stylesheet" />
 </head>
 
-<body class="o-page o-page--center">
+<body class="o-page o-page--center" style="background-color:rgb(21, 127, 128);">
     <!--[if lte IE 9]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
