--- a/SistTestMillon/SistTestMillon/Views/Users/ListaUsuarios.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Users/ListaUsuarios.cshtml
@@ -103,7 +103,7 @@
         });
     });
     $("#nuevo").click(function () {
-        document.getElementById("TipoUsu").disabled = false;
+        document.getElementById("TipoUsuarios").disabled = false;
     });
     
 
