--- a/SistTestMillon/SistTestMillon/Views/Administradores/ListaAdministradores.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Administradores/ListaAdministradores.cshtml
@@ -60,10 +60,10 @@
                     </td>
                     <td class="c-table__cell u-text-right">
                         <div>
-                            <a class="c-btn c-btn--success" href="#!" onclick="funProd(@item.IdAdministrador, 'M', event);">
+                            <a class="c-btn c-btn--success" href="#!" onclick="funAdmin(@item.IdAdministrador, 'M', event);">
                                 <i class="fa fa-pencil-square-o u-mr-xsmall"></i>Editar
                             </a>
-                            <a class="c-btn c-btn--danger" href="#!" onclick="funProd(@item.IdAdministrador, 'E', event);">
+                            <a class="c-btn c-btn--danger" href="#!" onclick="funAdmin(@item.IdAdministrador, 'E', event);">
                                 <i class="fa fa-trash-o u-mr-xsmall"></i>Eliminar
                             </a>
                         </div>
