--- a/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
+++ b/SistTestMillon/SistTestMillon/Views/Shared/_Layout.cshtml
@@ -24,6 +24,11 @@
     
    
 </head>
+@if (Session["TipoUsuario"] == null)
+{
+    Response.Redirect("~/Account/Index");
+}
+else {
 <body class="o-page">
     <!--[if lte IE 9]>
            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -46,32 +51,35 @@
                         <i class="fa fa-product-hunt u-mr-xsmall"></i>Citas <span class="c-badge c-badge--success c-badge--xsmall u-ml-xsmall">New</span>
                     </a>
                 </li>
-                @if (HttpContext.Current.Session["TipoUsuario"].Equals("Paciente") || HttpContext.Current.Session["TipoUsuario"].Equals("Administrador"))
+
+
+                @if (HttpContext.Current.Session["TipoUsuario"].Equals("Psicologo") || HttpContext.Current.Session["TipoUsuario"].Equals("Administrador"))
                 {
                 <li class="c-sidebar__item">
-                    <a class="c-sidebar__link" href="~/TestMillon">
-                        <i class="fa fa-table u-mr-xsmall"></i>Test De Millon
-                    </a>
-                </li>
-                }
-
-                @if (HttpContext.Current.Session["TipoUsuario"].Equals("Psicologo")|| HttpContext.Current.Session["TipoUsuario"].Equals("Administrador")) {
-                <li class="c-sidebar__item">
                     <a class="c-sidebar__link " href="~/Pacientes" >
-                        <i class="fa fa-balance-scale u-mr-xsmall"></i>Pacientes
+                        <i class="fa fa-users u-mr-xsmall"></i>Pacientes
                     </a>
                 </li>
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link" href="~/Historias">
-                        <i class="fa fa-users u-mr-xsmall"></i>Historias
+                        <i class="fa fa-table u-mr-xsmall"></i>Historias
                     </a>
                 </li>
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link"  href="~/Diagnostico">
-                        <i class="fa fa-table u-mr-xsmall"></i>Diagnosticos
+                        <i class="fa fa-balance-scale u-mr-xsmall"></i>Diagnosticos
                     </a>
                 </li>
                 }
+                @if (HttpContext.Current.Session["TipoUsuario"].Equals("Paciente") || HttpContext.Current.Session["TipoUsuario"].Equals("Administrador"))
+                {
+                    <li class="c-sidebar__item">
+                        <a class="c-sidebar__link" href="~/TestMillon">
+                            <i class="fa fa-table u-mr-xsmall"></i>Test De Millon
+                        </a>
+                    </li>
+                }
+
             </ul>
             @if (HttpContext.Current.Session["TipoUsuario"].Equals("Administrador"))
             {
@@ -79,7 +87,7 @@
             <ul class="c-sidebar__list">
                 <li class="c-sidebar__item">
                     <a class="c-sidebar__link"  href="~/Psicologos">
-                        <i class="fa fa-money u-mr-xsmall"></i>Psicologos
+                        <i class="fa fa-users u-mr-xsmall"></i>Psicologos
                     </a>
                 </li>
                 <li class="c-sidebar__item">
@@ -94,6 +102,11 @@
                 </li>
             </ul>
             }
+            @if (HttpContext.Current.Session["TipoUsuario"] == null)
+            {
+                Response.Redirect("~/Account/Index");
+            }
+
         </div><!-- // .c-sidebar -->
     </div><!-- // .o-page__sidebar -->
     <!-- MAIN CONTENT -->
@@ -154,7 +167,7 @@
                     </a>
                 </div>
                 <div>
-                     @if (HttpContext.Current.Session["Nombres"] == null || HttpContext.Current.Session["ApellidoPaterno"] ==null)
+                     @if (HttpContext.Current.Session["Nombres"] == null || HttpContext.Current.Session["ApellidoPaterno"] == null)
                      {
                          Response.Redirect("~/Account/Index");
                      }
@@ -170,8 +183,8 @@
                     <img  src="~/Content/img/users.png"  style="width:40px;height:40px">
                 </a>
                 <div class="c-dropdown__menu dropdown-menu dropdown-menu-right" aria-labelledby="dropdwonMenuAvatar">
-                    <a class="c-dropdown__item dropdown-item" href="#">Editar Perfil</a>
-                    <a class="c-dropdown__item dropdown-item" href="@Url.Action("Cerrar", "TestMillon")">Cerrar Sesion</a>
+                    <a class="c-dropdown__item dropdown-item"  onclick="funUsuario2(@HttpContext.Current.Session["Usuario_Id"], 'M', event);"    >Editar Perfil</a>
+                    <a class="c-dropdown__item dropdown-item" href="@Url.Action("Cerrar", "Home")">Cerrar Sesion</a>
 
                 </div>
             </div>
@@ -195,4 +208,5 @@
 
     @RenderSection("scripts", false)
 </body>
+}
 </html>
